# comic-translate

./: .gitignore  README.md  comic-translate.cabal  comic_translate.cabal  comictrans.cabal  rtit.cabal  stack.yaml
app/: Main.hs
gui/: comic-translate.glade  comic-translate.xml  rtit.glade
src/: DataSource.hs  Main.hs  Ocr.hs  Snippets.txt  TranslateAPI.hs
src/Comic/: DataSource.hs  OCR.hs  Pixbuf.hs  Translate.hs
